...
      style={{ flex: 1, backgroundColor: "rgba(254,254,250, 0.1)" }}
    >
      <KeyboardAwareScrollView onPress={Keyboard.dismiss}>
        <ScrollView style={styles.container}>
          <View>
            <Text>
              Add new customer details who is looking to rent or buy a property
            </Text>
          </View>
          {/* <View style={styles.header}>
            <Text>Select Property Type</Text>
          </View>
          <View style={styles.propSection}>
...
              }}
              containerBorderRadius={10}
            />
          </View> */}

          <View style={[styles.header, { marginTop: 30 }]}>
            <Text>Customer Details</Text>
          </View>
          <View style={styles.propSection}>
            <TextInput
              label="Name*"
              value={ownerName}
              // returnKeyType={"done"}
...
